environments/ephemeral/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-app
  namespace: ephemeral
spec:
  hosts:
    - "test.example.com"
  gateways:
    - test-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: test-app-nginx.ephemeral.svc.cluster.local
            port:
              number: 8080
